hphp/test/slow/hack_mode/2203.php.expectf
HipHop Fatal error: syntax error, unexpected T_HACK_ERROR, expecting $end in %s/hphp/test/slow/hack_mode/2203.php on line 1
